src/validation/tests/snapshots/rusty__validation__tests__array_validation_test__array_assignment_function_call.snap
---
source: src/validation/tests/array_validation_test.rs
expression: diagnostics
---
error: Invalid assignment: cannot assign '__foo_return' to '__main_arr_incorrect_size'
   ┌─ <internal>:16:13
   │
16 │             arr_incorrect_size  := foo(); // We want a invalid size array error here
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign '__foo_return' to '__main_arr_incorrect_size'

error: Array __main_arr_incorrect_size has a size of 2, but 4 elements were provided
   ┌─ <internal>:16:36
   │
16 │             arr_incorrect_size  := foo(); // We want a invalid size array error here
   │                                    ^^^^^^ Array __main_arr_incorrect_size has a size of 2, but 4 elements were provided


